<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:targetApi="34">

    <TextView
        android:id="@+id/clueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clue_first"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/hintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_elapsed_0s"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/foundItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_it"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_gravity="center"/>
</LinearLayout>

