<!-- activity_clue_solved_page.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/clueSolvedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clue_solved"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/locationInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_pike_place_market_was_founded_in_1907"
        android:textSize="30sp"
        android:padding="40sp"/>

    <TextView
        android:id="@+id/elapsedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elapsed_time_0s"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Proceed"
        android:layout_gravity="center"/>
</LinearLayout>
