<!-- activity_treasure_hunt_completed.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/congratulationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/finalLocationInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_location_information_here"
        android:textSize="30sp"
        android:padding="40sp"/>

    <TextView
        android:id="@+id/totalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time_0s"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"/>
</LinearLayout>
