<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treasure_hunt"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <TextView
            android:id="@+id/rulesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_rules"
            android:padding="40dp"
            android:textSize="30sp"
            android:lineSpacingMultiplier="1.0"/>
    </ScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"/>
</LinearLayout>
